--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,24 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
+} */
+
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+} */
+
+input:required{
+  /* border:2px solid red; */
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,11 +27,234 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+} */
+
+::after,
+::before{
+  padding: 0;
+  margin:0;
+  box-sizing: border-box;
 }
+
+
+
+ 
+
+
+/* ---------form end------- */
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+   margin-bottom: 5px;
+   width:90%;
+  min-height:20px;
+   /* padding: 3px; */
+}
+
+
+form{
+  width:100%;
+  height: auto;
+}
+
+
+form input{
+  width:200px;
+  vertical-align:left;
+  /* margin-top:-5px; */
+  align-items:last baseline;
+}
+
+form span{
+  width:170px;
+  margin:4px;
+  font-size: 16px;
+}
+
+form input{
+  /* padding:2px; */
+  margin:5px;
+  font-size: 15px;
+  border-radius: 5px;
+  /* border:3px solid #f9f9f9; */
+  width:7cm;
+
+}
+
+form textarea{
+  width: 64%; /* Ensure the textarea takes up the full width */
+  /* resize: vertical; */
+  resize: none; /* Disable resizing */
+  overflow: hidden; /* Hide any overflow content */
+}
+
+@media print {
+  textarea {
+    border: none; /* Hide the border */
+  }
+
+}
+
+
+
+
+
+.form-group1{
+  width:100%;
+  min-height: 50px;
+
+}
+
+
+
+
+/* ---------table----------- */
+
+
+
+table textarea{
+  width:100%;
+  height:auto;
+  box-sizing: border-box;
+  /* padding: 2px; */
+  font-size: 15px;
+  resize: none;
+  overflow: auto;
+  border:none;
+  outline:none;
+  border-radius: 5px;
+  scrollbar-width: none;
+
+}
+
+.centered-div {
+   /* width: 100%;   */
+  /* height:80%;
+  max-width:1600px;  */
+   height: auto; 
+   display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+ 
+  
+  
+}
+
+#interactiveTable{
+width: 100%;
+/* margin-top: "5px"; */
+
+}
+
+.centered-div {
+  /* padding: 5px; */
+  border-radius: 2px;
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+table th{
+  font-size: smaller;
+}
+
+th, td {
+  border: 1px solid black;
+  padding: 2px;
+  text-align: center;
+  overflow: auto;
+}
+
+
+
+input{
+  width: 100%;
+   /* min-width: 100px;
+  max-width: 100%; */
+align-items: right;
+}
+
+@media print{
+  input {
+    border:none;
+  }
+};
+
+
+
+
+
+ /* .CalculateBtn{
+  cursor: pointer;
+  height:"100px";
+  width:"100px";
+  font-size: medium;
+  font-weight: 400;
+  background-color:black;
+  color:"blue";
+
+} */
 
 .App-link {
   color: #61dafb;
+  padding:1rem 3rem;
+  background-color: beige;
+  border:0px;
+  font-size: 20px;
+  position: relative;
+  border-radius: 0.2rem;
+
 }
+
+button{
+  padding: 1rem 3rem;
+  /* background-color:purple; */
+  border: 0px;
+  color:black;
+  font-size: 20px;
+  position: relative;
+  border-radius: 0.2rem;
+  cursor: pointer;
+
+}
+
+.Printbtn{
+  width: 100px;
+  border-radius: 0.23rem;
+  padding: 0.3rem 0.6rem;
+  text-align: center;
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 300;
+  /* margin-left: 30px; */
+  /* margin-bottom: 30px; */
+  cursor: pointer;
+  display: inline-block;
+   color: white;
+  /* border: 3px solid #c266d3; */
+  background-image: -webkit-linear-gradient(30deg, red 50%, transparent 50%);
+  background-image: linear-gradient(30deg, red 50%, transparent 50%);
+  background-size: 500px;
+  background-repeat: no-repeat;
+  background-position: 0%;
+  -webkit-transition: background 300ms ease-in-out;
+  transition: background 300ms ease-in-out;
+}
+
+.Printbtn:hover{
+  background-position: 100%;
+  color: black;
+  font-weight:300;
+
+}
+
+
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +264,5 @@
     transform: rotate(360deg);
   }
 }
+
+
