--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,3 @@
-/* .App {
-  text-align: center;
-} */
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-
-} */
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
-input:required{
-  /* border:2px solid red; */
-}
-
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
 
 ::after,
 ::before{
@@ -37,11 +7,7 @@ input:required{
 }
 
 
-
- 
-
-
-/* ---------form end------- */
+/* ----------------------form end------------------- */
 
 .form-group {
   display: flex;
@@ -102,19 +68,21 @@ form textarea{
 
 }
 
-@media print{
+/* @media print{
   .form-group > span .red-star{
     display: none;
    
   }
-}
+} */
 
 
 
 
 
 
-/* ---------table----------- */
+
+
+/* --------------------------table----------------------- */
 
 
 
@@ -194,43 +162,17 @@ align-items: right;
     -webkit-appearance: none;
     
   }
+  .form-group select{
+    border:none;
+    -webkit-appearance: none;
+    
+
+  }
 };
 
 
-/* @media print {
-  .form-group > span.red-star {
-    display: none;
-  }
-} */
 
 
-
-
-
-
-/* @media print {
-  .modelPrinting select {
-    border: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-  }
-} */
-
-
-
-
-
- /* .CalculateBtn{
-  cursor: pointer;
-  height:"100px";
-  width:"100px";
-  font-size: medium;
-  font-weight: 400;
-  background-color:black;
-  color:"blue";
-
-} */
 
 .App-link {
   color: #61dafb;
@@ -245,7 +187,7 @@ align-items: right;
 
 button{
   padding: 1rem 3rem;
-  /* background-color:purple; */
+  
   border: 0px;
   color:black;
   font-size: 20px;
