--- a/src/App.css
+++ b/src/App.css
@@ -1,71 +1,63 @@
-
 ::after,
-::before{
+::before {
   padding: 0;
-  margin:0;
+  margin: 0;
   box-sizing: border-box;
 }
 
-
-/* ----------------------form end------------------- */
+/* ------------------------- form end ----------------------- */
 
 .form-group {
   display: flex;
   flex-direction: row;
-   margin-bottom: 5px;
-   width:90%;
-  min-height:20px;
-   /* padding: 3px; */
+  margin-bottom: 5px;
+  width: 90%;
+  min-height: 20px;
+  /* padding: 3px; */
 }
 
-
-form{
-  width:100%;
+form {
+  width: 100%;
   height: auto;
 }
 
-
-form input{
-  width:200px;
-  vertical-align:left;
+form input {
+  width: 200px;
+  vertical-align: left;
   /* margin-top:-5px; */
-  align-items:last baseline;
+  align-items: last baseline;
 }
 
-form span{
-  width:170px;
-  margin:4px;
+form span {
+  width: 170px;
+  margin: 4px;
   font-size: 16px;
 }
 
-form input{
+form input {
   /* padding:2px; */
-  margin:5px;
+  margin: 5px;
   font-size: 15px;
   border-radius: 5px;
   /* border:3px solid #f9f9f9; */
-  width:7cm;
-
+  width: 7cm;
 }
 
-form textarea{
-  width: 64%; /* Ensure the textarea takes up the full width */
-  /* resize: vertical; */
-  resize: none; /* Disable resizing */
-  overflow: hidden; /* Hide any overflow content */
+form textarea {
+  width: 64%;
+  resize: none;
+  overflow: hidden;
 }
 
 @media print {
   textarea {
-    border: none; /* Hide the border */
+    border: none;
   }
-
 }
 
-.form-group1{
-  width:100%;
+.form-group1 {
+  width: 100%;
   min-height: 50px;
-
 }
 
 /* @media print{
@@ -75,50 +67,35 @@ form textarea{
   }
 } */
 
-
-
-
-
-
-
-
 /* --------------------------table----------------------- */
 
-
-
-table textarea{
-  width:100%;
-  height:auto;
+table textarea {
+  width: 100%;
+  height: auto;
   box-sizing: border-box;
   /* padding: 2px; */
   font-size: 15px;
   resize: none;
   overflow: auto;
-  border:none;
-  outline:none;
+  border: none;
+  outline: none;
   border-radius: 5px;
   scrollbar-width: none;
-
 }
 
 .centered-div {
-   /* width: 100%;   */
+  /* width: 100%;   */
   /* height:80%;
   max-width:1600px;  */
-   height: auto; 
-   display: flex;
+  height: auto;
+  display: flex;
   flex-direction: column;
   align-items: center;
   overflow: hidden;
- 
-  
-  
 }
 
-#interactiveTable{
-width: 100%;
-/* margin-top: "5px"; */
-
+#interactiveTable {
+  width: 100%;
 }
 
 .centered-div {
@@ -133,71 +110,97 @@ table {
   align-items: center;
   justify-content: center;
 }
-table th{
+table th {
   font-size: smaller;
 }
 
-th, td {
+th,
+td {
   border: 1px solid black;
   padding: 2px;
   text-align: center;
   overflow: auto;
 }
 
-
-
-input{
+input {
   width: 100%;
-   /* min-width: 100px;
+  /* min-width: 100px;
   max-width: 100%; */
-align-items: right;
+  align-items: right;
 }
 
-@media print{
+@media print {
   input {
-    border:none;
+    border: none;
   }
   .modelPrinting select {
-    border:none;
+    border: none;
     -webkit-appearance: none;
-    
   }
-  .form-group select{
-    border:none;
+  .form-group select {
+    border: none;
     -webkit-appearance: none;
-    
-
   }
-};
-
-
-
-
+  button {
+    border: none;
+  }
+  .Printbtn {
+    display: none;
+  }
+}
 
 .App-link {
   color: #61dafb;
-  padding:1rem 3rem;
+  padding: 1rem 3rem;
   background-color: beige;
-  border:0px;
+  border: 0px;
   font-size: 20px;
   position: relative;
   border-radius: 0.2rem;
+}
+
+
+.CalculateBtn {
+  padding: 1rem 3rem;
+  border: 0px;
+  color: black;
+  font-size: 20px;
+  font-weight: 570;
+  position: relative;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  background-color: #AF8260;
+  border: 1px solid #f5f5f5;
+  box-shadow: 0 0 0 0;
+  transition: box-shadow 0.25s;
+
 
 }
 
-button{
+@media print {
+  .CalculateBtn:disabled {
+    display: none;
+  }
+}
+
+@media print{
+  .Printbtn:disabled{
+    display: none;
+  }
+}
+
+
+button {
   padding: 1rem 3rem;
-  
   border: 0px;
-  color:black;
+  color: black;
   font-size: 20px;
   position: relative;
   border-radius: 0.2rem;
   cursor: pointer;
-
 }
 
-.Printbtn{
+.Printbtn {
   width: 100px;
   border-radius: 0.23rem;
   padding: 0.3rem 0.6rem;
@@ -205,14 +208,12 @@ button{
   color: #000;
   text-transform: uppercase;
   font-weight: 300;
-  /* margin-left: 30px; */
-  /* margin-bottom: 30px; */
   cursor: pointer;
   display: inline-block;
-   color: white;
-  /* border: 3px solid #c266d3; */
-  background-image: -webkit-linear-gradient(30deg, red 50%, transparent 50%);
-  background-image: linear-gradient(30deg, red 50%, transparent 50%);
+  /* color:black; */
+  color: white;
+  background-image: -webkit-linear-gradient(30deg, red, transparent 50%);
+  background-image: linear-gradient(30deg, red, transparent 50%);
   background-size: 500px;
   background-repeat: no-repeat;
   background-position: 0%;
@@ -220,14 +221,27 @@ button{
   transition: background 300ms ease-in-out;
 }
 
-.Printbtn:hover{
+.Printbtn:hover {
   background-position: 100%;
   color: black;
-  font-weight:300;
-
+  font-weight: 300;
 }
 
 
+/* hide date symbol while printing */
+@media print {
+
+  input[type="date"]::-webkit-inner-spin-button,
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+  }
+
+  /* Hide date input symbols in Firefox */
+  input[type="date"] {
+    -moz-appearance: textfield;
+  }
+}
 
 @keyframes App-logo-spin {
   from {
@@ -237,5 +251,3 @@ button{
     transform: rotate(360deg);
   }
 }
-
-
